--- a/src/components/UI/Modal/Modal.css
+++ b/src/components/UI/Modal/Modal.css
@@ -10,6 +10,13 @@
     top: 30%;
     box-sizing: border-box;
     transition: all 0.3s ease-out;
+    transform: translateY(-100vh);
+    opacity: 0;
+}
+
+.Show {
+    transform: translateY(0);
+    opacity: 1;
 }
 
 @media (min-width: 600px) {
