add form Input component and generate a general form to handle it

--- a/src/containers/Checkout/ContactData/ContactData.css
+++ b/src/containers/Checkout/ContactData/ContactData.css
@@ -1,14 +1,13 @@
 .ContactData {
     width: 80%;
+    padding: 10px;
     text-align: center;
     margin: 20px auto;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 3px #eee;
+    box-sizing: border-box;
 }
 
-.Input {
-    width: 100%;
-    display: block;
-    text-align: left;
-}
 
 @media (min-width: 600px) {
     .ContactData {
