--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -1,8 +1,17 @@
 .Order {
-    width: 100%;
+    width: 80%;
     padding: 10px;
     margin: 10px auto;
     box-sizing: border-box;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc
+}
+
+.Order span {
+    text-transform: capitalize;
+    display: inline-block;
+    margin: 0 8px;
+    padding: 5px;
+    border: 1px solid #eee;
+    box-shadow: 0 2px 3px #ccc;
 }
