--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -23,3 +23,13 @@
 .InputElement:focus {
     background-color: #ccc;
 }
+
+.Invalid {
+    border: 1px solid red;
+    background-color: #db7373;
+}
+
+.ValidationError {
+    color: red;
+    margin: 5px 0;
+}
