--- a/src/components/Order/CheckoutSummary/CheckoutSummary.css
+++ b/src/components/Order/CheckoutSummary/CheckoutSummary.css
@@ -9,8 +9,8 @@
     /* margin: auto; */
 }
 
-@media (min-width: 600px) {
+/* @media (min-width: 600px) {
     .CheckoutSummary {
         width: 500px;
     }
-}
+} */
