add animation to burger builder using react-transition-group

--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -26,3 +26,21 @@
         height: 600px;
     }
 }
+
+.IngredientEnter {
+    opacity: 0;
+}
+
+.IngredientEnterActive {
+    opacity: 1;
+    transition: opacity 300ms ease-in;
+}
+
+.IngredientExit {
+    opacity: 1;
+}
+
+.IngredientExitActive {
+    opacity: 0;
+    transition: opacity 300ms ease-out;
+}
